# personal-management

./: .gitignore  CLAUDE.md  justfile  pyproject.toml  radicale.conf
frontend/: .cta.json  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/components/common/: ConfirmDialog.tsx  DueDatePicker.tsx  Fab.tsx
frontend/src/components/lists/: CreateListDialog.tsx  ListCard.tsx  ListSettingsDialog.tsx  ListsView.tsx
frontend/src/components/tasks/: TaskCard.tsx  TaskDetailDialog.tsx  TaskFormDrawer.tsx  TasksView.tsx
frontend/src/lib/: api.ts  auth-hooks.ts  auth.ts  queries.ts  schemas.ts  tasks-api.ts
frontend/src/routes/: __root.tsx  _authenticated.tsx  index.tsx  login.tsx
frontend/src/routes/_authenticated/: calendar.tsx  lists.$listId.tsx  lists.index.tsx  settings.tsx  tasks.tsx
scripts/: radicale_adduser.py
src/core/: api.py  forms.py  models.py  radicale_sync.py  signals.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_list_remote_url_task_remote_etag_task_remote_uid.py
src/core/templates/: base.html
src/core/templates/core/: home.html  list_list.html  task_create.html  task_list.html
src/core/tests/: conftest.py  test_auth.py  test_lists.py  test_tasks.py
src/personal_management/: asgi.py  settings.py  urls.py  wsgi.py
src/templates/: index.html
src/theme/static_src/: package-lock.json  package.json
