[project]
name = "personal-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "django-ninja>=1.4.3",
    "django-ninja-jwt>=5.3.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "personal_management.settings"
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]

